--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run Tests
-      working-directory: ./group_one
+      working-directory: ./
       env:
         DATABASE_URL: postgres://postgres:password@localhost:5432/test_db
         SECRET_KEY: ci-test-key-not-secret
