--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements/ci.txt
 
     - name: Run Tests
       working-directory: ./
@@ -44,6 +44,7 @@ jobs:
         DATABASE_URL: postgres://postgres:password@localhost:5432/test_db
         SECRET_KEY: ci-test-key-not-secret
         DEBUG: True
+        DJANGO_SETTINGS_MODULE: assessment.settings.dev
       run: |
         python manage.py migrate
         python manage.py test api
